--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Blog - 淘Sthing.
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Xzy
+  email : usedtodebug@gmail.com
+  github : xzy
+  twitter : NULL
+  feedburner : NULL
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
